--- a/tmux.conf/.tmux.conf
+++ b/tmux.conf/.tmux.conf
@@ -32,6 +32,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
 
+# Start windows and panes at 1, not 0 
+set -g base-index 1 
+setw -g pane-base-index 1
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
